fix alignment of contact, website and support on md, lg screen sizes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -79,6 +79,12 @@ a:hover {
       font-size: 0.7rem;
       margin: 0.2rem;
     }
+
+    @media (min-width: 768px) {
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
 
